# django-crm

./: pyproject.toml
webcrm/: settings.py
