[project]
name = ""
version = "0.0.1"
dependencies = [
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "asgiref==3.8.1",
    "attrs==24.3.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "django==5.1.5",
    "et-xmlfile==2.0.0",
    "frozenlist==1.5.0",
    "geoip2==4.8.1",
    "idna==3.10",
    "maxminddb==2.6.3",
    "multidict==6.1.0",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "polib==1.2.0",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tendo==0.3.0",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "xlsxwriter==3.2.0",
    "yarl==1.18.3",
]

[build-system]
requires = ['setuptools>=40.9.0']
build-backend = 'setuptools.build_meta'

[tool.uv]
package = false
